syntax = "proto3";
package matcha.view.tabscreen;
import "github.com/overcyn/matcha/pb/imageview.proto";

option go_package = "tabscreen";
option objc_class_prefix = "MatchaTabScreenPB";

message ChildView {
    int64 id = 1;
    string title = 2;
    imageview.Image icon = 3;
    imageview.Image selectedIcon = 4;
    string badge = 5;
}

message View {
    repeated ChildView screens = 1;
    int64 selectedIndex = 2;
    int64 eventFunc = 3;
}

message Event {
    int64 selectedIndex = 1;
}